[package]
name = "server-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
prost = "0.10.4"
tokio = { version = "1.19.2", features = ["full"] }
tonic = "0.7.2"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.7.2"
